Add SVG assets for various relationship occasions
- Created wedding.svg to represent a wedding occasion with a "Just Married" theme.
- Added best-friend.svg to depict a best friend relationship with vibrant colors.
- Introduced boyfriend.svg showcasing a casual boyfriend character.
- Created casual-friend.svg to illustrate a casual friendship.
- Added clients.svg representing a professional relationship with a business theme.
- Introduced colleague.svg to depict a colleague in a work environment.
- Created father.svg to represent a father figure with a warm design.
- Added girlfriend.svg showcasing a girlfriend character with a romantic theme.
- Introduced husband.svg to depict a husband figure in a stylish suit.
- Created mother.svg to represent a mother figure with floral elements.
- Added wife.svg showcasing a wife character with elegant details.

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -183,7 +183,7 @@
     <div class="category-grid" id="occasion-category-grid">
       @for (cat of occasionCategories; track cat.label) {
         <div class="category-card" (click)="navigateToCategory(cat.route)">
-          <div class="category-icon">{{ cat.label.charAt(0) }}</div>
+          <img [src]="cat.icon" [alt]="cat.label" class="category-image" />
           <div class="category-label">{{ cat.label }}</div>
         </div>
       }
@@ -211,7 +211,7 @@
     <div class="category-grid" id="relationship-category-grid">
       @for (cat of relationshipCategories; track cat.label) {
         <div class="category-card" (click)="navigateToCategory(cat.route)">
-          <div class="category-icon">{{ cat.label.charAt(0) }}</div>
+          <img [src]="cat.icon" [alt]="cat.label" class="category-image" />
           <div class="category-label">{{ cat.label }}</div>
         </div>
       }
@@ -239,7 +239,7 @@
     <div class="category-grid" id="festival-category-grid">
       @for (cat of festivalCategories; track cat.label) {
         <div class="category-card" (click)="navigateToCategory(cat.route)">
-          <div class="category-icon">{{ cat.label.charAt(0) }}</div>
+          <img [src]="cat.icon" [alt]="cat.label" class="category-image" />
           <div class="category-label">{{ cat.label }}</div>
         </div>
       }
